--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
       "import": "./dist/esm/Image/index.js",
       "types": "./dist/types/Image/index.d.ts"
     },
+    "./video-player": {
+      "require": "./dist/cjs/VideoPlayer/index.js",
+      "import": "./dist/esm/VideoPlayer/index.js",
+      "types": "./dist/types/VideoPlayer/index.d.ts"
+    },    
     "./structured-text": {
       "require": "./dist/cjs/StructuredText/index.js",
       "import": "./dist/esm/StructuredText/index.js",
@@ -50,6 +55,9 @@
       ],
       "image": [
         "./dist/types/Image/index.d.ts"
+      ],
+      "video-player": [
+        "./dist/types/VideoPlayer/index.d.ts"
       ],
       "structured-text": [
         "./dist/types/StructuredText/index.d.ts"
@@ -97,6 +105,7 @@
     "raf": "^3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "resize-observer-polyfill": "^1.5.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.1.2",
     "typescript": "^5.0.0"
