--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,10 +39,11 @@
     "noImplicitAny": true,
     "resolveJsonModule": true,
     "strictNullChecks": true,
+    "lib": ["ESNext"],
 
     // React specific
     "jsx": "react"
   },
   "include": ["src/**/*", "test/jest-dom.d.ts", "react-extras.d.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "src/__tests__", "src/**/*.test.tsx"]
 }
